2007-01-07  Bruno Haible  <bruno@clisp.org>

	* msgmerge.c (message_merge): Copy the obsolete bit from the ref
	message.
	Reported by Leonardo Fontenelle <leo.fontenelle@gmail.com>.

2006-12-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (AM_CXXFLAGS): New variable.

2006-12-23  Bruno Haible  <bruno@clisp.org>

	* color.c (print_color_test): Print labels before the hue/saturation
	rectangle. Show also a few lines that mix colors and attributes.

2006-12-03  Bruno Haible  <bruno@clisp.org>

	* msgcat.c: Include color.h.
	(long_options): Add --color, --style options.
	(main): Handle them. Invoke print_color_test when --color=test was
	given.
	(usage): Document --color, --style options.

2006-12-01  Bruno Haible  <bruno@clisp.org>

	Add styling support to the PO output routines.
	* color.h: New file.
	* color.c: New file.
	* write-catalog.h (struct catalog_output_format): Add field
	'supports_color'.
	* write-catalog.c: Include fcntl.h, unistd.h, styled-ostream.h,
	term-styled-ostream.h, html-styled-ostream.h, fd-ostream.h, color.h,
	po-charset.h, msgl-iconv.h.
	(STDOUT_FILENO): New macro.
	(ENABLE_COLOR): New macro.
	(msgdomain_list_print): Use a styled_ostream_t that uses the
	style_file_name.
	* write-po.c: Include format.h, styled-ostream.h.
	(is_stylable, begin_css_class, end_css_class): New functions or macros.
	(class_header, class_translated, class_untranslated, class_fuzzy,
	class_obsolete, class_comment, class_translator_comment,
	class_extracted_comment, class_reference_comment, class_reference,
	class_flag_comment, class_flag, class_fuzzy_flag,
	class_previous_comment, class_previous, class_msgid, class_msgstr,
	class_keyword, class_string, class_text, class_escape_sequence,
	class_format_directive, class_invalid_format_directive): New variables.
	(ATTR_ESCAPE_SEQUENCE, ATTR_FORMAT_DIRECTIVE,
	ATTR_INVALID_FORMAT_DIRECTIVE): New enum items.
	(message_print_comment, message_print_comment_dot,